@@ -37,10 +37,10 @@ public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getByte("column")).thenReturn((byte) 100);
-    assertEquals(new Byte((byte) 100), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Byte.valueOf((byte) 100), TYPE_HANDLER.getResult(rs, "column"));
 
     when(rs.getByte("column")).thenReturn((byte) 0);
-    assertEquals(new Byte((byte) 0), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Byte.valueOf((byte) 0), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -55,10 +55,10 @@ public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getByte(1)).thenReturn((byte) 100);
-    assertEquals(new Byte((byte) 100), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Byte.valueOf((byte) 100), TYPE_HANDLER.getResult(rs, 1));
 
     when(rs.getByte(1)).thenReturn((byte) 0);
-    assertEquals(new Byte((byte) 0), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Byte.valueOf((byte) 0), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -73,10 +73,10 @@ public class ByteTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getByte(1)).thenReturn((byte) 100);
-    assertEquals(new Byte((byte) 100), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Byte.valueOf((byte) 100), TYPE_HANDLER.getResult(cs, 1));
 
     when(cs.getByte(1)).thenReturn((byte) 0);
-    assertEquals(new Byte((byte) 0), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Byte.valueOf((byte) 0), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
