@@ -37,10 +37,10 @@ public class IntegerTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByName() throws Exception {
     when(rs.getInt("column")).thenReturn(100);
-    assertEquals(new Integer(100), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Integer.valueOf(100), TYPE_HANDLER.getResult(rs, "column"));
 
     when(rs.getInt("column")).thenReturn(0);
-    assertEquals(new Integer(0), TYPE_HANDLER.getResult(rs, "column"));
+    assertEquals(Integer.valueOf(0), TYPE_HANDLER.getResult(rs, "column"));
   }
 
   @Override
@@ -55,10 +55,10 @@ public class IntegerTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromResultSetByPosition() throws Exception {
     when(rs.getInt(1)).thenReturn(100);
-    assertEquals(new Integer(100), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Integer.valueOf(100), TYPE_HANDLER.getResult(rs, 1));
 
     when(rs.getInt(1)).thenReturn(0);
-    assertEquals(new Integer(0), TYPE_HANDLER.getResult(rs, 1));
+    assertEquals(Integer.valueOf(0), TYPE_HANDLER.getResult(rs, 1));
   }
 
   @Override
@@ -73,10 +73,10 @@ public class IntegerTypeHandlerTest extends BaseTypeHandlerTest {
   @Test
   public void shouldGetResultFromCallableStatement() throws Exception {
     when(cs.getInt(1)).thenReturn(100);
-    assertEquals(new Integer(100), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Integer.valueOf(100), TYPE_HANDLER.getResult(cs, 1));
 
     when(cs.getInt(1)).thenReturn(0);
-    assertEquals(new Integer(0), TYPE_HANDLER.getResult(cs, 1));
+    assertEquals(Integer.valueOf(0), TYPE_HANDLER.getResult(cs, 1));
   }
 
   @Override
